# listing-app

./: .env.example  .gitignore  package.json  pnpm-lock.yaml  vite.config.js
.github/workflows/: build.yml
docs/: google-sheets-integration.md
src/: App.svelte  main.ts
src-tauri/: Cargo.toml  rust-toolchain.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  g2g_api.rs  main.rs  sheets.rs
src/lib/: accounts.ts  championTracking.ts  parser.ts  settings.ts  skinPrices.ts
src/lib/components/: SettingsWarning.svelte
src/routes/: +page.svelte
src/routes/list/[id]/: +page.svelte
src/routes/settings/: +layout.ts  +page.svelte
