[package]
name = "g2g-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "g2g_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-opener = "2.1"
tauri-plugin-dialog = "2.1"
tauri-plugin-fs = "2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.23", features = ["json"] }
tokio = { version = "1.47.1", features = ["full"] }
urlencoding = "2.1"
dotenvy = "0.15"
rand = "0.8"
flate2 = "1.0"
chrono = "0.4"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-opener = "2.1"
tauri-plugin-dialog = "2.1"
tauri-plugin-fs = "2.1"
